--- a/notebooks/train.Rmd
+++ b/notebooks/train.Rmd
@@ -1,9 +1,6 @@
 ---
 title: "Training the model"
 output: html_notebook
-params:
-  # data: "data.spatial"
-  data: "data"
 ---
 
 In this notebook we train our model based on previous years. The code supports both the spatial dataset as the regular.
@@ -21,7 +18,7 @@ library(doParallel)
 ### Read data
 
 ```{r}
-data <- read_rds("../results/{params$data}.Rds" %>% glue())
+data <- read_rds("../results/data.Rds" %>% glue())
 head(data)
 ```
 
@@ -30,9 +27,9 @@ head(data)
 ```{r message=FALSE, warning=FALSE, echo=T, purl=FALSE}
 
 mcols <- names(data) %>% discard(~ !str_detect(.x, "^MortalityRate\\."))
-cols <- c("Temperature", "PopElder", "PM2.5", "PM10", "NO2", "O3", "RegioS", mcols)
+cols <- c("Temperature", "PopElder", "PM2.5", "PM10", "NO2", "O3", "RegioS")
 # cols <- c("Temperature", "PM2.5", mcols)
-pcols <- c("MortalityRate.-5", "MortalityRate.-6", "MortalityRate.-7", "MortalityRate.-8", "Temperature",  "PM2.5", "NO2", "PopElder")
+pcols <- c("Temperature",  "PM2.5", "NO2", "PM10", "O3", "PopElder")
 pdata <- gather(data %>% filter(RegioS == "NL"), "Var", "Value", pcols) 
 
 data %>% filter(RegioS == "GM0345" &`MortalityRate.-1` < 0)
@@ -57,6 +54,8 @@ data_train <- data %>%
   select(c("MortalityRate", cols)) %>%
   as.data.frame()
 
+regios <- data %>% distinct(RegioS) %>% pull(RegioS) %>% head(50)
+
 data_train.spatial <- data %>% filter(year(Date) < 2020 & RegioS != "NL") %>%
   select(c("MortalityRate", cols)) %>% 
   as.data.frame() %>% 
@@ -73,13 +72,13 @@ data_train.spatial
 cluster <- makeCluster(detectCores() - 1) # convention to leave 1 core for OS
 registerDoParallel(cluster)
 
-fitControl <- trainControl(method = "repeatedcv", number = 50, repeats = 20, search = "random", allowParallel = F, verboseIter = F)
-fitControl2 <- trainControl(method = "repeatedcv", number = 10, repeats = 10, search = "random", allowParallel = F, verboseIter = F)
+fitControl <- trainControl(method = "repeatedcv", number = 50, repeats = 20, search = "random", allowParallel = T, verboseIter = F)
+fitControl2 <- trainControl(method = "repeatedcv", number = 20, repeats = 20, search = "random", allowParallel = T, verboseIter = F)
 
 tic()
 model.cv <- train(
   MortalityRate ~ ., 
-  data = data_train %>% select_if(~ length(unique(.)) > 1), 
+  data = data_train %>% select(-RegioS), 
   method = "lasso", 
   trControl = fitControl, 
   na.action = na.omit, 
@@ -90,14 +89,13 @@ toc()
 tic()
 model.spatial <- train(
   MortalityRate ~ ., 
-  data = data_train.spatial %>% select_if(~ length(unique(.)) > 1), 
+  data = data_train.spatial %>% select_if(~ length(unique(.)) > 1) %>% select(-RegioS), 
   method = "lasso", 
   trControl = fitControl2, 
   na.action = na.omit, 
   # preProcess = c('scale', 'center')
 )
 toc()
-model.spatial
 
 stopCluster(cluster)
 
